<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name" >Pole Search
    </string>
    <string name="action_settings" >Settings
    </string>
    <string name="title_section1" >Search
    </string>
    <string name="title_section2" >Find Nearby
    </string>
    <string name="title_section3" >Section 3
    </string>
    <string name="button_send">Search
    </string>
    <string name="grid_loc">Enter Location
    </string>
    <string name="radio_GridLocation">Grid Location
    </string>
    <string name="radio_PoleNumber">Pole Number
    </string>
    <string name="menu_search">Search
    </string>
    <string name="share">Share
    </string>
    <string name="button_search">  Search
    </string>
    <string name="menu_close">Close
    </string>
    <string name="lon">Longitude
    </string>
    <string name="lat">Latitude
    </string>
    <string name="noLoc">No Loc. Found
    </string>
    <string name="latitude_longitude">%1$.8f, %2$.8f
    </string>
    <string name="resolved">Error resolved. Please re-try operation.
    </string>
    <string name="no_resolution">Google Play services: unable to resolve connection error.
    </string>
    <string name="unknown_activity_request_code">
        Received an unknown activity request code %1$d in onActivityResult.
    </string>
    <string name="play_services_available">Google Play services is available
    </string>
    <string name="title_activity_map_view">Pole Map
    </string>
</resources>
