<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android">
    <EditText
        android:id="@+id/edit_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="27dp"
        android:ems="10"
        android:hint="@string/grid_loc"
        android:imeOptions="actionDone"
        android:singleLine="true" />

    <Button
        android:id="@+id/button1"
        android:onClick="SearchClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/edit_message"
        android:layout_toRightOf="@+id/edit_message"
        android:background="@drawable/btn_green"
        style="@style/ButtonText"
        android:text="@string/button_search" />

    <RadioGroup
        android:id="@+id/radioSearchType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edit_message"
        android:layout_below="@+id/edit_message"
        android:layout_marginTop="22dp" >

        <RadioButton
            android:id="@+id/radioGrid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_GridLocation" />

        <RadioButton
            android:id="@+id/radioPole"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_PoleNumber" />
    </RadioGroup>
</RelativeLayout>