<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="26dp"
        android:layout_marginTop="24dp"
        android:text="@string/lat"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/TextView03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/TextView01"
        android:layout_below="@+id/TextView01"
        android:layout_marginTop="20dp"
        android:text="@string/lon"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/TextView02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/TextView01"
        android:layout_alignBottom="@+id/TextView01"
        android:layout_marginLeft="69dp"
        android:layout_toRightOf="@+id/TextView03"
        android:text="@string/noLoc"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/TextView04"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/TextView03"
        android:layout_alignBottom="@+id/TextView03"
        android:layout_alignLeft="@+id/TextView02"
        android:text="@string/noLoc"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/TextView05"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TextView04"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:text="@string/noLoc"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/TextView06"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/TextView05"
        android:layout_below="@+id/TextView05"
        android:layout_marginTop="15dp"
        android:text="@string/noLoc"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/TextView07"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/TextView06"
        android:layout_below="@+id/TextView06"
        android:layout_marginTop="15dp"
        android:text="@string/noLoc"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/TextView08"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/TextView07"
        android:layout_below="@+id/TextView07"
        android:layout_marginTop="15dp"
        android:text="@string/noLoc"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/TextView09"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/TextView08"
        android:layout_below="@+id/TextView08"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="36dp"
        android:text="@string/noLoc"
        android:textSize="20sp" />

    <Button
        android:id="@+id/showmap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TextView09"
        android:layout_centerHorizontal="true"
        android:onClick="ShowMapClick"
        android:background="@drawable/btn_green"
        style="@style/ButtonText"
        android:text="Show Map" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="stop update"
        android:id="@+id/button"
        android:layout_below="@+id/showmap"
        android:onClick="BtnStopClick"
        android:layout_alignParentLeft="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="start update"
        android:id="@+id/button2"
        android:layout_alignBottom="@+id/button"
        android:onClick="BtnStartClick"
        android:layout_alignParentRight="true"/>

</RelativeLayout>